--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,32 @@
-<ion-tabs>
-
+<ion-tabs #tabs (ionTabsDidChange)="setCurrentTab($event)">
+<!-- <ion-router-outlet></ion-router-outlet> Ensure router outlet exists -->
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    
+    <ion-tab-button tab="home">
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="search">
+      <ion-icon name="search"></ion-icon>
+      <ion-label>Search</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="create">
+      <ion-icon name="create"></ion-icon>
+      <ion-label>Create</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="tv">
+      <ion-icon name="tv"></ion-icon>
+      <ion-label>TV</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="profile">
+     <img src="https://img.icons8.com/?size=100&id=15263&format=png&color=737373" alt="" width="25px" height="25px">
+      <!-- Optional label -->
+      <ion-label>Profile</ion-label>
+    </ion-tab-button>
+
   </ion-tab-bar>
-
 </ion-tabs>
